--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://guilhermenobre.github.io/portfolio-guilherme/",
+  "homepage": "https://guilhermenobre.github.io/portfolio-guilherme",
   "name": "react-portfolio",
   "private": true,
   "version": "1.0.0",
@@ -15,7 +15,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -25,8 +26,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "gh-pages": "^6.1.1",
-    "sass": "^1.69.5",
+    "gh-pages": "^6.1.0",
+    "sass": "^1.69.7",
     "vite": "^5.0.8"
   }
 }
