--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://guilhermenobre.github.io/",
+  "homepage": "https://guilhermenobre.github.io/portfolio-guilherme",
   "name": "react-portfolio",
   "private": true,
   "version": "1.1.1",
